[gd_scene load_steps=18 format=3 uid="uid://dt10ivhvl670v"]

[ext_resource type="Script" path="res://InimigoBase.gd" id="1_g66jv"]
[ext_resource type="Texture2D" uid="uid://bio3v6yf2u6a2" path="res://Untitled19_20240903140425.png" id="2_xy72b"]
[ext_resource type="Texture2D" uid="uid://djcvmsl7mhvix" path="res://Untitled18_20240903135844.png" id="3_o6akr"]
[ext_resource type="Script" path="res://label.gd" id="4_083nv"]
[ext_resource type="Texture2D" uid="uid://bp6lgysp5wx2c" path="res://branko.png" id="5_rlfy3"]
[ext_resource type="AudioStream" uid="uid://dqpy75un2cql6" path="res://step1.mp3" id="6_t84j4"]
[ext_resource type="AudioStream" uid="uid://bk31dfsl3hy3t" path="res://step2.mp3" id="7_rdjgt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_k4uo5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xy72b")
}],
"loop": true,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_o6akr")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_vf5k1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InimigoSpr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walking"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InimigoSpr:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("InimigoAttackHitbox/InimigoHitboxColl:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("light1:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.99, 0.99)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("light1:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("fot1:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("fot2:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4lfi4"]
resource_name = "attack"
length = 0.66
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InimigoSpr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walking"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InimigoSpr:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("InimigoAttackHitbox/InimigoHitboxColl:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.66),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("light1:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2.82843, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("light1:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_x3n63"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InimigoSpr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Hurt"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InimigoSpr:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("light1:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("light1:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_prlxa"]
resource_name = "walking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InimigoSpr:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walking"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InimigoSpr:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("light1:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("light1:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("fot1:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(-0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("fot2:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.55),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5gotj"]
_data = {
"RESET": SubResource("Animation_vf5k1"),
"attack": SubResource("Animation_4lfi4"),
"hurt": SubResource("Animation_x3n63"),
"walking": SubResource("Animation_prlxa")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tv6bs"]
radius = 17.0
height = 68.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t53i6"]
radius = 18.5301
height = 71.4091

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q02pn"]
radius = 23.0
height = 182.469

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w3nja"]
size = Vector2(21.3645, 20)

[node name="InimigoBase" type="CharacterBody2D" groups=["Inimigo_hurtbox"]]
collision_layer = 2
script = ExtResource("1_g66jv")
velocidade = 100
lado = 1
dano = 1
vida = 3
idletoatktimer = 1

[node name="InimigoSpr" type="AnimatedSprite2D" parent="."]
rotation = 3.14159
scale = Vector2(0.04, -0.04)
sprite_frames = SubResource("SpriteFrames_k4uo5")
animation = &"Walking"

[node name="InimigoAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5gotj")
}

[node name="InimigoColl" type="CollisionShape2D" parent="."]
scale = Vector2(2.05072, 2.1846)
shape = SubResource("CapsuleShape2D_tv6bs")

[node name="InimigoHurtbox" type="Area2D" parent="." groups=["Inimigo_hurtbox"]]
scale = Vector2(2.05072, 2.1846)
collision_layer = 2

[node name="InimigoHurtboxColl" type="CollisionShape2D" parent="InimigoHurtbox"]
shape = SubResource("CapsuleShape2D_t53i6")
debug_color = Color(1, 0, 0, 0.419608)

[node name="InimigoAttackDetection" type="Area2D" parent="."]
collision_layer = 2

[node name="InimigoAttackDetectionColl" type="CollisionShape2D" parent="InimigoAttackDetection"]
position = Vector2(59, 1)
scale = Vector2(1, 0.876859)
shape = SubResource("CapsuleShape2D_q02pn")

[node name="InimigoAttackHitbox" type="Area2D" parent="."]
collision_layer = 2

[node name="InimigoHitboxColl" type="CollisionShape2D" parent="InimigoAttackHitbox"]
position = Vector2(82, 0)
scale = Vector2(4.31166, 7.65444)
shape = SubResource("RectangleShape2D_w3nja")
disabled = true
debug_color = Color(1, 0.6, 0, 0.419608)

[node name="IdleToAtkTimer" type="Timer" parent="."]

[node name="VidaLabel" type="Label" parent="."]
offset_left = -27.0
offset_top = -110.0
offset_right = 29.0
offset_bottom = -87.0
text = "Vida: N"
script = ExtResource("4_083nv")

[node name="light1" type="PointLight2D" parent="."]
scale = Vector2(0.99, 0.99)
blend_mode = 2
texture = ExtResource("5_rlfy3")

[node name="light2" type="PointLight2D" parent="."]
scale = Vector2(0.99, 0.99)
texture = ExtResource("5_rlfy3")

[node name="dark1" type="PointLight2D" parent="."]
scale = Vector2(1.355, 1.355)
blend_mode = 1
texture = ExtResource("5_rlfy3")

[node name="dark2" type="PointLight2D" parent="."]
scale = Vector2(1.355, 1.355)
blend_mode = 1
texture = ExtResource("5_rlfy3")

[node name="fot1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_t84j4")
volume_db = 6.0
pitch_scale = 0.8
max_distance = 750.0
panning_strength = 3.0

[node name="fot2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_rdjgt")
volume_db = 6.0
pitch_scale = 0.6
max_distance = 750.0
panning_strength = 0.4

[connection signal="animation_finished" from="InimigoAnim" to="." method="_on_inimigo_anim_animation_finished"]
[connection signal="body_entered" from="InimigoAttackDetection" to="." method="_on_inimigo_attack_detection_body_entered"]
[connection signal="body_exited" from="InimigoAttackDetection" to="." method="_on_inimigo_attack_detection_body_exited"]
[connection signal="area_entered" from="InimigoAttackHitbox" to="." method="_on_inimigo_attack_hitbox_area_entered"]
[connection signal="timeout" from="IdleToAtkTimer" to="." method="_on_idle_to_atk_timer_timeout"]
